--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <div class="main">
         <div class="nav">
-            <div class="nav1"></div>
+            <div class="nav1">
+                <div class="logo">
+                    <h1>e</h1>
+                </div>
+            </div>
             <div class="nav2"></div>
         </div>
     </div>
